@@ -122,7 +122,7 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
   // true if some complex internal invariants must be checked on every operation;
   private boolean ASSERT_INVARIANTS;
 
-  HighlightInfoUpdaterImpl(Project project) {
+  private HighlightInfoUpdaterImpl(Project project) {
     Disposer.register(this, () -> {
       if (FileDocumentManager.getInstance() instanceof FileDocumentManagerBase managerBase) {
         managerBase.forEachCachedDocument(document -> {
@@ -179,11 +179,12 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
             .map(h -> h.isValid() ? HighlightInfo.fromRangeHighlighter(h) : null)
             .filter(h-> h != null && h.toolId != null)
             .toList();
-        LOG.trace("psiFileEvictionListener: {" + hash + "} -> (" + (oldMap == null ? 0 : oldMap.size()) + "): " +
+        LOG.trace("psiFileEvictionListener: " + document+
+                  "{" + hash + "} -> (" + (oldMap == null ? 0 : oldMap.size()) + "): " +
                   "\noldMap:" + oldMap +
-                  "\nall stored infos:(" + infos.size() + "): " + render(infos)+
-                  "\nall model  infos:(" + fromModel.size() + "): " + render(fromModel)+
-                  "\n"+Thread.currentThread()
+                  "\nall stored infos " + debugRender(infos) +
+                  "\nall model  infos " + debugRender(fromModel) +
+                  "\n" + Thread.currentThread()
                   );
       }
       for (Project project : ProjectManager.getInstance().getOpenProjects()) {
@@ -241,7 +242,7 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
   private static void addEvictedInfos(@NotNull Project project, @NotNull List<? extends HighlightInfo> infos) {
     if (!infos.isEmpty()) {
       if (LOG.isTraceEnabled()) {
-        LOG.trace("addEvictedInfos: " + render(infos)+currentProgressInfo()+Thread.currentThread());
+        LOG.trace("addEvictedInfos: " + debugRender(infos) + currentProgressInfo() + Thread.currentThread());
       }
       Map<Document, Collection<HighlightInfo>> evictedMap = HashMap.newHashMap(infos.size());
       for (HighlightInfo info : infos) {
@@ -265,7 +266,7 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
         }
         while (!((UserDataHolderEx)document).replace(EVICTED_PSI_ELEMENTS, storedInfos, newInfos));
         if (LOG.isTraceEnabled()) {
-          LOG.trace("addEvictedInfos("+document+"): stored " + render(List.of(newInfos)));
+          LOG.trace("addEvictedInfos(" + document + "): stored " + debugRender(Arrays.asList(newInfos)));
         }
         if (newInfos.length != (storedInfos == null ? 0 : storedInfos.length)) {
           ReadAction.run(() -> {
@@ -484,12 +485,12 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
           // heuristic: when the incremental reparse support is poor, and a lot of PSI is invalidated unnecessarily on each typing,
           //  that PSI has a big chance to be recreated in that exact place later, when a (major) chunk of the file is reparsed, so we do not kill that highlighter, just recycle it to avoid annoying blinking
           // if however, that invalid PSI highlighter wasn't recycled after a short delay, kill it (runWithInvalidPsiRecycler()) to improve responsiveness to outdated infos
-          if (LOG.isTraceEnabled()) {
-            LOG.trace("recycleInvalidPsiElements (predicate=" + toolIdPredicate + ") " + info.getHighlighter() +
-                      "; toolIdPredicate=" + toolIdPredicate +
-                      " for invalid " + debugPsiInfo(psiElement) +
-                      " " + session.getProgressIndicator());
-          }
+           if (LOG.isTraceEnabled()) {
+             LOG.trace("recycleInvalidPsiElements (predicate=" + toolIdPredicate + ") " + info.getHighlighter() +
+                       "; toolIdPredicate=" + toolIdPredicate +
+                       " for invalid " + debugPsiInfo(psiElement) +
+                       " " + session.getProgressIndicator());
+           }
            if (info.getHighlighter() != null) {
              invalidPsiRecycler.recycleHighlighter(psiElement, info);
            }
@@ -498,8 +499,10 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
 
     if (LOG.isTraceEnabled() && !invalidPsiRecycler.forAllInGarbageBin().isEmpty()) {
       Collection<InvalidPsi> psis = invalidPsiRecycler.forAllInGarbageBin();
+      List<InvalidPsi> sorted = ContainerUtil.sorted(ContainerUtil.getFirstItems(new ArrayList<>(psis), 100),
+                                                     (o1, o2) -> BY_OFFSETS_AND_HASH_ERRORS_FIRST.compare(o1.info(), o2.info()));
       LOG.trace("recycleInvalidPsiElements: found " + psis.size() + " invalid psi elements in " + psiFile.getName() + " for " + toolIdPredicate +
-                (psis.isEmpty() ? "" : ":\n"+ StringUtil.join(psis, "\n    ")) +
+                (psis.isEmpty() ? "" : ":\n"+ StringUtil.join(sorted, "\n    ")) +
                 " " +session.getProgressIndicator());
     }
   }
@@ -698,7 +701,7 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
       newInfo.updateLazyFixesPsiTimeStamp(psiTimeStamp);
     }
     synchronized (this) {
-      assertMarkupConsistentWithData(psiFile, isInspectionToolId(toolId) ? WhatTool.INSPECTION : WhatTool.ANNOTATOR_OR_VISITOR);
+      //assertMarkupConsistentWithData(psiFile, isInspectionToolId(toolId) ? WhatTool.INSPECTION : WhatTool.ANNOTATOR_OR_VISITOR);
       Map<Object, ToolHighlights> data = getData(psiFile, hostDocument);
       ToolHighlights toolHighlights = data.get(toolId);
       List<? extends HighlightInfo> oldInfos = ContainerUtil.notNullize(toolHighlights == null ? null : toolHighlights.elementHighlights.get(visitedPsiElement));
@@ -739,7 +742,7 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
       });
     }
     //assertNoDuplicates(psiFile, getInfosFromMarkup(hostDocument, project), "markup after psiElementVisited ");
-    assertMarkupConsistentWithData(psiFile, isInspectionToolId(toolId) ? WhatTool.INSPECTION : WhatTool.ANNOTATOR_OR_VISITOR);
+    //assertMarkupConsistentWithData(psiFile, isInspectionToolId(toolId) ? WhatTool.INSPECTION : WhatTool.ANNOTATOR_OR_VISITOR);
     Reference.reachabilityFence(visitedPsiElement); // ensure no psi is gced while in the middle of modifying soft-ref maps
   }
 
@@ -794,8 +797,10 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
   }
 
   @NotNull
-  private Collection<HighlightInfo> getInfosFromMarkup(@NotNull PsiFile psiFile, @NotNull WhatTool toolIdPredicate) {
-    if (!isAssertInvariants()) return Set.of();
+  private List<HighlightInfo> getInfosFromMarkup(@NotNull PsiFile psiFile, @NotNull WhatTool toolIdPredicate) {
+    if (!isAssertInvariants()) {
+      return List.of();
+    }
     Project project = psiFile.getProject();
     Document hostDocument;
     //noinspection removal
@@ -822,23 +827,24 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
 
   private synchronized void assertMarkupConsistentWithData(@NotNull PsiFile psiFile, @NotNull WhatTool toolIdPredicate) {
     if (!isAssertInvariants()) return;
-    Collection<HighlightInfo> fromMarkup = getInfosFromMarkup(psiFile, toolIdPredicate);
+    List<HighlightInfo> fromMarkup = getInfosFromMarkup(psiFile, toolIdPredicate);
     // todo IJPL-339 process top level infos
     Set<HighlightInfo> fromData = new HashSet<>(getAllData(psiFile, toolIdPredicate));
 
     if (!new HashSet<>(fromMarkup).equals(fromData)) {
-      String fromDataStr = render(fromData);
-      String fromMarkupStr = render(fromMarkup);
       LOG.error("data inconsistent with markup. " +
-                "data(" +fromData.size()+"):\n" + fromDataStr + "\n" +
-                "---------------markup(" +fromMarkup.size()+"):\n" + fromMarkupStr+
+                "data " + debugRender(List.copyOf(fromData)) + "\n" +
+                "---------------markup " + debugRender(fromMarkup) +
                 "\n========="
       );
     }
   }
 
-  private static String render(Collection<? extends HighlightInfo> infos) {
-    return StringUtil.join(ContainerUtil.sorted(infos, BY_OFFSETS_AND_HASH_ERRORS_FIRST), "\n");
+  private static String debugRender(@NotNull List<? extends HighlightInfo> infos) {
+    List<? extends HighlightInfo> first = ContainerUtil.getFirstItems(infos, 100);
+    return "("+infos.size()+"):"
+           +StringUtil.join(ContainerUtil.sorted(first, BY_OFFSETS_AND_HASH_ERRORS_FIRST), "\n")
+           +(infos.size()>100 ? "..." : "");
   }
 
   @NotNull
@@ -1130,6 +1136,7 @@ public final class HighlightInfoUpdaterImpl extends HighlightInfoUpdater impleme
         }
       }
     });
+    assertMarkupConsistentWithData(session.getPsiFile(), toolIdPredicate);
   }
 
   /**
